<resources>
    <string name="app_name">ZŁOMEK car service</string>

    <!-- Strings related to login -->
    <string name="ip">192.168.0.102</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Hasło</string>
    <string name="action_sign_in">Zaloguj się</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Nieprawidłowy Email</string>
    <string name="error_invalid_password">Nieprawidłowe hasło!</string>
    <string name="error_incorrect_password">Nieprawidłowe hasło!</string>
    <string name="error_field_required">To pole jest wymagane!</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="login">Logowanie</string>
    <string name="registration">Rejestracja</string>
    <string name="remind_password">Przyomnij hasło</string>
    <string name="new_account">Nowe konto</string>


    <string name="name">Imię:</string>
    <string name="surname">Nazwisko:</string>
    <string name="phone_number">Tel:</string>
    <string name="email">E-mail:</string>
    <string name="city_name">Miasto</string>
    <string name="street_name">Ulica:</string>
    <string name="build_number">Nr domu/lokalu:</string>
    <string name="apt_number">Nr mieszkania:</string>
    <string name="zip_code">Kod pocztowy:</string>
    <string name="password">Hasło:</string>
    <string name="conf_password">Potwierdź hasło:</string>
    <string name="cancel">Anuluj</string>
    <string name="create_account">Utwórz konto</string>

    <string name="visit_date_label">Wybierz datę wizyty</string>
    <string name="is_overview">Czy jest to przegląd?</string>

    <string name="error_email_NOT_EXIST">Konto o podanym e-mail nie istnieje!</string>
    <string name="log_out">Wyloguj się</string>
    <string name="error_email_EXIST">Konto o podanym email już istnieje!</string>
    <string name="your_profile">Twoje konto</string>
    <string name="car">Samochody</string>
    <string name="add_car">Dodaj samochód</string>
    <string name="add_car_info">Dodawanie samochodu</string>
    <string name="brand">Marka:</string>
    <string name="model">Model:</string>
    <string name="registration_number">Nr rejestracyjny:</string>
    <string name="production_year">Rok produkcji:</string>
    <string name="vin_number">Numer VIN:</string>
    <string name="data_client_info">Twoje dane</string>
    <string name="save">Zapisz</string>
    <string name="edit_data">Edycja danych</string>
    <string name="last_password">Poprzednie hasło:</string>
    <string name="change_password">Zmień hasło</string>
    <string name="new_password">Nowe hasło:</string>
    <string name="change_password_info">Zmiana hasła</string>
    <string name="choose_car">Samochód:</string>
        <string name="add_visit">Umów wizytę</string>
    <string name="choose_visit_date">Podaj datę</string>
    <string name="date_placeholder">dd-mm-yyyy</string>
    <string name="visit_date_invalid">Data wizyty powinna być co najmniej dzisiaj i nie przekraczać 3 tygodni</string>
    <string name="choose_visit_time">Podaj godzinę</string>
    <string name="visit_time_invalid" >Wizyta powinna zostać zamówiona na godziny między 8 a 16</string>
</resources>

