<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:title="HOME"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sign_in"
        android:orderInCategory="100"
        android:title="@string/login"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_register"
        android:orderInCategory="100"
        android:title="@string/registration"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_check_your_profil"
        android:orderInCategory="100"
        android:title="@string/your_profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_car"
        android:orderInCategory="100"
        android:title="@string/car"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_visits"
        android:orderInCategory="100"
        android:title="Wizyty"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_log_out"
        android:orderInCategory="100"
        android:title="@string/log_out"
        app:showAsAction="never" />
</menu>
