<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin_bottom"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.sylwi.servicecarzlomekmobileaplication.activity.RegistrationActivity"
    tools:showIn="@layout/app_bar_registration">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/activity_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/abril_fatface"
            android:text="@string/registration"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/first_name_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/first_name_form"
                    android:layout_alignBottom="@+id/first_name_form"
                    android:layout_alignParentStart="true"
                    android:labelFor="@id/first_name_form"
                    android:text="@string/name"
                    android:textSize="18sp" />

                <EditText
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/first_name_form"
                    android:layout_toEndOf="@+id/first_name_info"
                    android:inputType="textPersonName"
                    />

                <TextView
                    android:id="@+id/last_name_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/last_name_form"
                    android:layout_alignBottom="@+id/last_name_form"
                    android:layout_alignParentStart="true"
                    android:labelFor="@id/last_name_form"
                    android:text="@string/surname"
                    android:textSize="18sp" />

                <EditText
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/last_name_form"
                    android:layout_below="@+id/first_name_form"
                    android:layout_toEndOf="@+id/last_name_info"
                    android:layout_alignParentEnd="true"
                    android:inputType="textPersonName"/>

                <TextView
                    android:id="@+id/email_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/email_form"
                    android:layout_alignBottom="@+id/email_form"
                    android:layout_alignParentStart="true"
                    android:labelFor="@id/email_form"
                    android:text="@string/email"
                    android:textSize="18sp" />

                <EditText
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/email_form"
                    android:layout_below="@+id/last_name_form"
                    android:layout_toEndOf="@+id/email_info"
                    android:layout_alignParentEnd="true"
                    android:inputType="textEmailAddress"/>

                <TextView
                    android:id="@+id/phone_number_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/phone_number_form"
                    android:layout_alignBottom="@+id/phone_number_form"
                    android:layout_alignParentStart="true"
                    android:labelFor="@id/phone_number_form"
                    android:text="@string/phone_number"
                    android:textSize="18sp" />

                <EditText
                    android:layout_height="wrap_content"
                    android:layout_width="316dp"
                    android:id="@+id/phone_number_form"
                    android:layout_below="@+id/email_form"
                    android:layout_toEndOf="@+id/phone_number_info"
                    android:layout_alignParentEnd="true"
                    android:inputType="phone"/>

                <TextView
                    android:id="@+id/city_name_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/city_name_form"
                    android:layout_alignBottom="@+id/city_name_form"
                    android:layout_alignParentStart="true"
                    android:labelFor="@id/city_name_form"
                    android:text="@string/city_name"
                    android:textSize="18sp" />

                <EditText
                    android:layout_height="wrap_content"
                    android:layout_width="316dp"
                    android:id="@+id/city_name_form"
                    android:layout_below="@+id/phone_number_form"
                    android:layout_toEndOf="@+id/city_name_info"
                    android:layout_alignParentEnd="true"
                    android:inputType="text"/>

                <TextView
                    android:id="@+id/street_name_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/street_name_form"
                    android:layout_alignBottom="@+id/street_name_form"
                    android:layout_alignParentStart="true"
                    android:labelFor="@id/street_name_form"
                    android:text="@string/street_name"
                    android:textSize="18sp" />

                <EditText
                    android:layout_height="wrap_content"
                    android:layout_width="316dp"
                    android:id="@+id/street_name_form"
                    android:layout_below="@+id/city_name_form"
                    android:layout_toEndOf="@+id/street_name_info"
                    android:layout_alignParentEnd="true"
                    android:inputType="text"/>

                <TextView
                    android:id="@+id/build_num_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/build_num_form"
                    android:layout_alignBottom="@+id/build_num_form"
                    android:layout_alignParentStart="true"
                    android:labelFor="@id/build_num_form"
                    android:text="@string/build_number"
                    android:textSize="18sp" />

                <EditText
                    android:layout_height="wrap_content"
                    android:layout_width="316dp"
                    android:id="@+id/build_num_form"
                    android:layout_below="@+id/street_name_form"
                    android:layout_toEndOf="@+id/build_num_info"
                    android:layout_alignParentEnd="true"
                    android:inputType="text"/>

                <TextView
                    android:id="@+id/apt_num_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/apt_num_form"
                    android:layout_alignBottom="@+id/apt_num_form"
                    android:layout_alignParentStart="true"
                    android:labelFor="@id/apt_num_form"
                    android:text="@string/apt_number"
                    android:textSize="18sp" />

                <EditText android:layout_height="wrap_content"
                    android:layout_width="316dp"
                    android:id="@+id/apt_num_form"
                    android:layout_below="@+id/build_num_form"
                    android:layout_toEndOf="@+id/apt_num_info"
                    android:layout_alignParentEnd="true"
                    android:inputType="text"/>

                <TextView
                    android:id="@+id/zip_code_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/zip_code_form"
                    android:layout_alignBottom="@+id/zip_code_form"
                    android:layout_alignParentStart="true"
                    android:labelFor="@id/zip_code_form"
                    android:text="@string/zip_code"
                    android:textSize="18sp" />

                <EditText
                    android:layout_height="wrap_content"
                    android:layout_width="316dp"
                    android:id="@+id/zip_code_form"
                    android:layout_below="@+id/apt_num_form"
                    android:layout_toEndOf="@+id/zip_code_info"
                    android:layout_alignParentEnd="true"
                    android:inputType="text"/>

                <TextView
                    android:id="@+id/passwd_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/passwd_form"
                    android:layout_alignBottom="@+id/passwd_form"
                    android:layout_alignParentStart="true"
                    android:labelFor="@id/passwd_form"
                    android:text="@string/password"
                    android:textSize="18sp" />

                <EditText
                    android:layout_height="wrap_content"
                    android:layout_width="316dp"
                    android:id="@+id/passwd_form"
                    android:layout_below="@+id/zip_code_form"
                    android:layout_toEndOf="@+id/passwd_info"
                    android:layout_alignParentEnd="true"
                    android:inputType="textPassword"/>

                <TextView
                    android:id="@+id/conf_passwd_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/conf_passwd_form"
                    android:layout_alignBottom="@+id/conf_passwd_form"
                    android:layout_alignParentStart="true"
                    android:labelFor="@id/conf_passwd_form"
                    android:text="@string/conf_passwd"
                    android:textSize="18sp" />

                <EditText
                    android:layout_height="wrap_content"
                    android:layout_width="316dp"
                    android:id="@+id/conf_passwd_form"
                    android:layout_below="@+id/passwd_form"
                    android:layout_toEndOf="@+id/conf_passwd_info"
                    android:layout_alignParentEnd="true"
                    android:inputType="textPassword"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_below="@id/conf_passwd_info">

                    <Button
                        android:id="@+id/cancel_action"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/cancel"
                        style="@android:style/Widget.Button"

                         />

                    <Button
                        android:id="@+id/save_button"
                        style="@android:style/Widget.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/create_account"

                        android:textStyle="bold" />

                </LinearLayout>



            </RelativeLayout>


        </ScrollView>

    </LinearLayout>




</RelativeLayout>










